the only thing missing is the reading of the board